<resources>
    <string name="app_name">FollowTheBitcoins</string>
    <string name="app_title">Follow The Bitcoins</string>

    <string name="app_dev">Developed by</string>
    <string name="app_creator">Giulia Roperto</string>
    <string name="app_ticker">INFOS</string>
    <string name="app_orderbook">TRANSACOES</string>
    <string name="app_trades">NEGOCIACOES</string>
    <string name="app_dialogTitle">COINS</string>
    <string name="app_dialogCancel">CANCEL</string>
    <string name="app_dialogOk">OK</string>

    <string name="app_coinHigh">Highest Price: </string>
    <string name="app_coinLow">Lowest Price: </string>
    <string name="app_coinVol">Quantity Sold: </string>
    <string name="app_coinLast">Last Price: </string>
    <string name="app_coinBuy">Highest Buy Price: </string>
    <string name="app_coinSell">Highest Sell Price: </string>
    <string name="app_coinDate">Date: </string>

    <string name="app_orderQuantity">Quantity: </string>
    <string name="app_orderPrice">Price: </string>

    <string name="app_orderAsksBtn">Venda</string>
    <string name="app_orderBidsBtn">Compra</string>
</resources>
