<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_eggplant"
    tools:context=".SplashActivity"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="100dp"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="horizontal"
        />

    <ImageView
        android:id="@+id/imgApp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_money"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guidelineMiddle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_title"
        android:textSize="45sp"
        android:textColor="@color/jungle_green"
        android:textAlignment="center"
        android:padding="30dp"
        />

    <ProgressBar
        android:id="@+id/prgBrSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/jungle_green"
        />

    <TextView
        android:id="@+id/txtDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/jungle_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtDevName"
        android:textSize="25sp"
        android:text="@string/app_dev"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/txtDevName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/jungle_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="30sp"
        android:text="@string/app_creator"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>